data/derived/comb/progs/unify/prog3066.ml.out
Characters 69-89:
  else digitsOfInt (n / 10) :: (n % 10);;
       ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
